--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.9.2</version> <!-- Make sure you are using the latest version -->
         </dependency>
+             <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version> <!-- Use the latest version -->
+    <scope>provided</scope>
+</dependency>
 
         <!-- Cucumber dependencies -->
         <dependency>
