--- a/pom.xml
+++ b/pom.xml
@@ -127,4 +127,9 @@
 
         <!-- Cucumber Core -->
         <dependency>
-            <gro
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>6.9.1</version>
+        </dependency>
+    </dependencies>
+</project>
