--- a/pom.xml
+++ b/pom.xml
@@ -10,46 +10,59 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- Setting the Java version for the build -->
+        <!-- Java version for compilation -->
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
 
-        <!-- Ensure UTF-8 encoding is used -->
+        <!-- Encoding settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <!-- Repositories for dependencies -->
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>https://repo.maven.apache.org/maven2</url>
-        </repository>
-    </repositories>
-
     <dependencies>
-        <!-- Bouncy Castle Dependency (example, update version as necessary) -->
+        <!-- Bouncy Castle Dependency -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.64</version>
         </dependency>
 
-        <!-- Other dependencies (e.g., Cucumber, JUnit, etc.) should go here -->
+        <!-- Cucumber Dependency (Adjust the version if needed) -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>4.8.0</version> <!-- Update the version as per your needs -->
+            <version>4.8.0</version> <!-- Replace with your required version -->
             <scope>test</scope>
         </dependency>
-        
-        <!-- JUnit Dependency for running tests -->
+
+        <!-- ExtentReports Dependency -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.9</version> <!-- Adjust the version if necessary -->
+        </dependency>
+
+        <!-- TestNG Dependency -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.7.0</version> <!-- Replace with the version you need -->
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Selenium WebDriver Dependency -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.0.0</version> <!-- Replace with your required version -->
+        </dependency>
+
+        <!-- JUnit Dependency (for running tests) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -60,7 +73,7 @@
 
     <build>
         <plugins>
-            <!-- Compiler plugin to set Java version for compiling -->
+            <!-- Compiler plugin for Java 17 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -68,17 +81,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                </configuration>
-            </plugin>
-
-            <!-- Resources plugin to handle non-source files -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.0</version>
-                <configuration>
-                    <!-- Optional: Use UTF-8 encoding for resource filtering -->
-                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
 
