--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,14 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.64</version>
         </dependency>
-             <dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.24</version> <!-- Update to latest version -->
-    <scope>provided</scope>
-         </dependency>
+
+        <!-- Lombok Dependency -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version> <!-- Update to latest version -->
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Cucumber Dependency (Adjust the version if needed) -->
         <dependency>
@@ -38,6 +40,29 @@
             <artifactId>cucumber-java</artifactId>
             <version>4.8.0</version> <!-- Replace with your required version -->
             <scope>test</scope>
+        </dependency>
+        
+        <!-- Add Cucumber TestNG support -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>4.8.0</version> <!-- Version compatible with cucumber-java -->
+            <scope>test</scope>
+        </dependency>
+
+        <!-- WebDriverManager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Apache Commons IO -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version> <!-- Ensure the latest version -->
         </dependency>
 
         <!-- ExtentReports Dependency -->
@@ -77,7 +102,7 @@
         </dependency>
     </dependencies>
 
-   <build>
+    <build>
         <plugins>
             <!-- Compiler plugin for Java 17 -->
             <plugin>
