--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,12 @@
             <version>5.3.0</version>
             <scope>test</scope>
         </dependency>
-
+         <repositories>
+    <repository>
+        <id>apache-repo</id>
+        <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+</repositories>
         <!-- Apache Commons IO -->
         <dependency>
             <groupId>org.apache.commons</groupId>
