--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Cucumber Dependency (Adjust the version if needed) -->
+        <!-- Cucumber Dependency -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>4.8.0</version> <!-- Replace with your required version -->
+            <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
         
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
-            <version>4.8.0</version> <!-- Version compatible with cucumber-java -->
+            <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -57,32 +57,26 @@
             <version>5.3.0</version>
             <scope>test</scope>
         </dependency>
-         <repositories>
-    
+
         <!-- Apache Commons IO -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.10.1</version> <!-- Ensure the latest version -->
+            <version>2.10.1</version>
         </dependency>
-                  <repository>
-        <id>apache-repo</id>
-        <url>https://repo.maven.apache.org/maven2</url>
-    </repository>
-</repositories>
 
         <!-- ExtentReports Dependency -->
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>5.0.9</version> <!-- Adjust the version if necessary -->
+            <version>5.0.9</version>
         </dependency>
 
         <!-- TestNG Dependency -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.7.0</version> <!-- Replace with the version you need -->
+            <version>7.7.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -90,10 +84,10 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.0.0</version> <!-- Replace with your required version -->
+            <version>4.0.0</version>
         </dependency>
 
-        <!-- JUnit Dependency (for running tests) -->
+        <!-- JUnit Dependency -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -108,13 +102,20 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>apache-repo</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <!-- Compiler plugin for Java 17 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version> <!-- Updated to latest version for better JDK 17 support -->
+                <version>3.10.1</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
