--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
         </dependency>
 
         <!-- Apache Commons IO -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
-        </dependency>
+       <dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>1.3.2</version>
+</dependency>
 
         <!-- ExtentReports Dependency -->
         <dependency>
