--- a/pom.xml
+++ b/pom.xml
@@ -19,18 +19,6 @@
     </properties>
 
     <dependencies>
-             <dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-api</artifactId>
-    <version>5.7.0</version>
-    <scope>test</scope>
-</dependency>
-<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-engine</artifactId>
-    <version>5.7.0</version>
-    <scope>test</scope>
-</dependency>
         <!-- Bouncy Castle Dependency -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
@@ -42,7 +30,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
+            <version>1.18.24</version> <!-- Update to latest version -->
             <scope>provided</scope>
         </dependency>
 
@@ -50,12 +38,19 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>7.14.0</version>
+            <version>7.14.0</version> <!-- Latest compatible version -->
         </dependency>
 
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
+            <version>7.14.0</version> <!-- Use the same version for all Cucumber libraries -->
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
             <version>7.14.0</version>
             <scope>test</scope>
         </dependency>
@@ -94,6 +89,21 @@
             <artifactId>selenium-java</artifactId>
             <version>4.0.0</version>
         </dependency>
+
+        <!-- JUnit Dependencies for JUnit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -115,6 +125,7 @@
                     <target>17</target>
                     <fork>true</fork>
                     <compilerArgs>
+                        <!-- Allow Lombok to access internal Java classes in JDK 17 -->
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
